--- a/download.html
+++ b/download.html
@@ -47,71 +47,47 @@ from Sept 2004 thru Dec 2020.
 
 <A NAME = "download"></A>
 
-<FORM ACTION="/vhosts/www.cs/sjplimp/download.pl" METHOD=POST>
-
 <P><B>Molecular dynamics codes:</B> (<A HREF = "https://www.lammps.org/download.html">LAMMPS download
 page</A>)
 </P>
-<INPUT TYPE="radio" NAME="choice" VALUE="PARADYN">
-<A HREF = "#pd">ParaDyn</A> --- embedded atom method (EAM) code, 390 Kb 
+<A HREF = "#pd">ParaDyn</A> --- embedded atom method (EAM) code, 390 KB, <A HREF = "tars/paradyn.tar.gz">download</A> 
 <BR>
-<INPUT TYPE="radio" NAME="choice" VALUE="LJ">
-<A HREF = "#lj">Lennard-Jones</A> --- 3 LJ codes with different parallel algorithms, 47 Kb 
+<A HREF = "#lj">Lennard-Jones</A> --- 3 LJ codes with different parallel algorithms, 47 KB, <A HREF = "tars/paradyn.tar.gz">download</A> 
 <BR>
 <P><B>Other software:</B>
 </P>
-<INPUT TYPE="radio" NAME="choice" VALUE="SPARTA"> 
 <A HREF = "http://sparta.sandia.gov">SPARTA</A> --- Direct Simulation Monte Carlo (DSMC) simulator,
-GPL license, 4.4 Mb 
+GPL license, 4.4 MB, <A HREF = "tars/paradyn.tar.gz">download</A> 
 <BR>
-<INPUT TYPE="radio" NAME="choice" VALUE="SPPARKS">
 <A HREF = "http://spparks.sandia.gov">SPPARKS</A> --- kinetic and Metropolis Monte Carlo simulator,
-GPL license, 3.5 Mb 
+GPL license, 3.5 MB, <A HREF = "tars/paradyn.tar.gz">download</A> 
 <BR>
-<INPUT TYPE="radio" NAME="choice" VALUE="CHEMCELL"> 
 <A HREF = "http://chemcell.sandia.gov">ChemCell</A> --- particle-based biological cell simulator, GPL
-license, 1.3 Mb 
+license, 1.3 MB, <A HREF = "tars/paradyn.tar.gz">download</A> 
 <BR>
-<INPUT TYPE="radio" NAME="choice" VALUE="MAPREDUCE">
 <A HREF = "http://mapreduce.sandia.gov">Mapreduce-MPI</A> --- MapReduce-MPI library, modified BSD
-license, 1.8 Mb 
+license, 1.8 MB, <A HREF = "tars/paradyn.tar.gz">download</A> 
 <BR>
-<INPUT TYPE="radio" NAME="choice" VALUE="PHISH"> 
 <A HREF = "http://www.sandia.gov/~sjplimp/phish.html">PHISH</A> --- PHISH streaming library, modified BSD license, 1.3
-Mb 
+MB, <A HREF = "tars/paradyn.tar.gz">download</A> 
 <BR>
-<INPUT TYPE="radio" NAME="choice" VALUE="CSLIB">
 <A HREF = "http://cslib.sandia.gov">CSlib</A> --- CSlib client/server messaging library, modified BSD
-license, 1.0 Mb 
+license, 1.0 MB, <A HREF = "tars/paradyn.tar.gz">download</A> 
 <BR>
-<INPUT TYPE="radio" NAME="choice" VALUE="FFTMPI"> 
 <A HREF = "http://fftmpi.sandia.gov">fftMPI</A> --- parallel 3d/2d complex FFT library, BSD license,
-0.9 Mb 
+0.9 MB, <A HREF = "tars/paradyn.tar.gz">download</A> 
 <BR>
-<INPUT TYPE="radio" NAME="choice" VALUE="PIZZA"> <A HREF = "http://pizza.sandia.gov">Pizza.py
-Toolkit</A> --- analysis/plotting/viz for
+<A HREF = "http://pizza.sandia.gov">Pizza.py Toolkit</A> --- analysis/plotting/viz for
 <A HREF = "https://www.lammps.org">LAMMPS</A>, <A HREF = "#chemcell">ChemCell</A>,
-<A HREF = "#spparks">SPPARKS</A>, <A HREF = "#sparta">SPARTA</A>, GPL license, 1.6 Mb 
+<A HREF = "#spparks">SPPARKS</A>, <A HREF = "#sparta">SPARTA</A>, GPL license, 1.6 MB, <A HREF = "tars/paradyn.tar.gz">download</A> 
 <BR>
-<INPUT TYPE="radio" NAME="choice" VALUE="GUPS"> <A HREF = "#gups">HPCC
-RandomAccess</A> --- algorithm for <A HREF = "http://icl.cs.utk.edu/hpcc/index.html">HPCC</A> GUPS benchmark, 22
-Kb 
+<A HREF = "#gups">HPCC RandomAccess</A> --- algorithm for <A HREF = "http://icl.cs.utk.edu/hpcc/index.html">HPCC</A> GUPS benchmark, 22
+KB, <A HREF = "tars/paradyn.tar.gz">download</A> 
 <BR>
-<INPUT TYPE="radio" NAME="choice" VALUE="GENE">
-<A HREF = "#gene">Parallel GeneHunter</A> --- parallel genetic linkage analysis, 740 Kb 
+<A HREF = "#gene">Parallel GeneHunter</A> --- parallel genetic linkage analysis, 740 KB, <A HREF = "tars/paradyn.tar.gz">download</A> 
 <BR>
-<INPUT TYPE="radio" NAME="choice" VALUE="TXT2HTML">
-<A HREF = "#txt2html">txt2html</A> --- text file to HTML converter for 		     WWW pages and documentation, 19 Kb 
+<A HREF = "#txt2html">txt2html</A> --- text file to HTML converter for 		     WWW pages and documentation, 19 KB, <A HREF = "tars/paradyn.tar.gz">download</A> 
 <BR>
-<P>
-
-<INPUT TYPE="radio" NAME="choice" VALUE="NONE" CHECKED="yes">
-No package 
-<BR>
-<P> <INPUT TYPE="submit" VALUE="Download Now"> </FORM>
-
-
-
 
 
 
