--- a/download.html
+++ b/download.html
@@ -9,25 +9,18 @@
 Sandia's molecular dynamics code <A HREF = "https://www.lammps.org">LAMMPS</A> has
 its own <A HREF = "https://www.lammps.org/download.html">download page</A>.
 </P>
-<P>Select the package you want via the circular check-button, click the
-"<B>Download Now</B>" button, and your browser should download a gzipped
-tar file.  Unpack it with the following commands, and look for a
-README to get you started.
+<P>Follow the info links below for more information on the individual
+packages.
+</P>
+<P>After clicking a download link below, your browser should prompt you
+to download gzipped tar file.  Unpack it with the following commands,
+and look for a README to get you started.
 </P>
 <PRE>gunzip file.tar.gz
 tar xvf file.tar 
 </PRE>
-<P>Note that some of these packages will unpack into a directory like
-pizza-16Mar09.  If the date is later than the release date listed
-below, it means you have downloaded an upgraded version that includes
-the bug fixes and new features listed on bug/feature page whose link
-is also given below.  However, when the program runs it will still
-print out the release date listed below to the screen, since that is
-not changed every time there is a bug fix.
-</P>
-<HR>
-
-<P>Follow the links below for more information on the individual packages.
+<P>Some of these packages will unpack into a directory like
+pizza-16Mar09, which is the version date for the current version.
 </P>
 <P>Some of this software is distributed freely; some is copyrighted
 open-source software distributed under the terms of the <A HREF = "http://www.gnu.org/copyleft/gpl.html">GNU Public
@@ -43,47 +36,57 @@ from Sept 2004 thru Dec 2020.
 </P>
 <A NAME = "download"></A>
 
-<P><B>Molecular dynamics codes:</B> (<A HREF = "https://www.lammps.org/download.html">LAMMPS download
-page</A>)
+<P><B>Molecular dynamics codes:</B> 
 </P>
-<A HREF = "#pd">ParaDyn</A> --- embedded atom method (EAM) code, 390 KB, <A HREF = "tars/paradyn.tar.gz">download</A> 
+LAMMPS <A HREF = "http://www.lammps.org">info</A> "download<A HREF = "https://www.lammps.org/download.html"></A>
+--- general materials modeling MD code, 100+ MB 
 <BR>
-<A HREF = "#lj">Lennard-Jones</A> --- 3 LJ codes with different parallel algorithms, 47 KB, <A HREF = "tars/paradyn.tar.gz">download</A> 
+ParaDyn <A HREF = "#pd">info</A> <A HREF = "tars/paradyn.tar.gz">download</A> --- embedded atom
+method (EAM) code, 390 KB 
+<BR>
+Lennard-Jones <A HREF = "#lj">info</A>, <A HREF = "tars/paradyn.tar.gz">download</A> --- 3 minimal
+LJ codes with different parallel algorithms, 47 KB 
 <BR>
 <P><B>Other software:</B>
 </P>
-<A HREF = "http://sparta.sandia.gov">SPARTA</A> --- Direct Simulation Monte Carlo (DSMC) simulator,
-GPL license, 4.4 MB, <A HREF = "tars/paradyn.tar.gz">download</A> 
+SPARTA <A HREF = "http://sparta.sandia.gov">info</A> <A HREF = "tars/sparta.tar.gz">download</A> --- Direct
+Simulation Monte Carlo (DSMC) simulator, GPL license, 4.4 MB 
 <BR>
-<A HREF = "http://spparks.sandia.gov">SPPARKS</A> --- kinetic and Metropolis Monte Carlo simulator,
-GPL license, 3.5 MB, <A HREF = "tars/paradyn.tar.gz">download</A> 
+SPPARKS <A HREF = "http://spparks.sandia.gov">info</A> <A HREF = "tars/spparks.tar.gz">download</A> --- kinetic and
+Metropolis Monte Carlo simulator, GPL license, 3.5 MB 
 <BR>
-<A HREF = "http://chemcell.sandia.gov">ChemCell</A> --- particle-based biological cell simulator, GPL
-license, 1.3 MB, <A HREF = "tars/paradyn.tar.gz">download</A> 
+ChemCell <A HREF = "http://chemcell.sandia.gov">info</A> <A HREF = "tars/chemcell.tar.gz">download</A> ---
+particle-based biological cell simulator, GPL license, 1.3 MB 
 <BR>
-<A HREF = "http://mapreduce.sandia.gov">Mapreduce-MPI</A> --- MapReduce-MPI library, modified BSD
-license, 1.8 MB, <A HREF = "tars/paradyn.tar.gz">download</A> 
+Mapreduce-MPI <A HREF = "http://mapreduce.sandia.gov">info</A> <A HREF = "tars/mapreduce.tar.gz">download</A> ---
+MapReduce-MPI library, modified BSD license, 1.8 MB 
 <BR>
-<A HREF = "http://www.sandia.gov/~sjplimp/phish.html">PHISH</A> --- PHISH streaming library, modified BSD license, 1.3
-MB, <A HREF = "tars/paradyn.tar.gz">download</A> 
+PHISH <A HREF = "http://www.sandia.gov/~sjplimp/phish.html">info</A> <A HREF = "tars/phish.tar.gz---">download</A> PHISH streaming
+library, modified BSD license, 1.3 MB 
 <BR>
-<A HREF = "http://cslib.sandia.gov">CSlib</A> --- CSlib client/server messaging library, modified BSD
-license, 1.0 MB, <A HREF = "tars/paradyn.tar.gz">download</A> 
+CSlib <A HREF = "http://cslib.sandia.gov">info</A> <A HREF = "tars/cslib.tar.gz">download</A> --- Client/server
+messaging library, modified BSD license, 1.0 MB 
 <BR>
-<A HREF = "http://fftmpi.sandia.gov">fftMPI</A> --- parallel 3d/2d complex FFT library, BSD license,
-0.9 MB, <A HREF = "tars/paradyn.tar.gz">download</A> 
+fftMPI <A HREF = "http://fftmpi.sandia.gov">info</A> <A HREF = "tars/fftmpi.tar.gz">download</A> --- parallel 3d/2d
+complex FFT library, BSD license, 0.9 MB 
 <BR>
-<A HREF = "http://pizza.sandia.gov">Pizza.py Toolkit</A> --- analysis/plotting/viz for
-<A HREF = "https://www.lammps.org">LAMMPS</A>, <A HREF = "#chemcell">ChemCell</A>,
-<A HREF = "#spparks">SPPARKS</A>, <A HREF = "#sparta">SPARTA</A>, GPL license, 1.6 MB, <A HREF = "tars/paradyn.tar.gz">download</A> 
+Pizza.py Toolkit <A HREF = "http://pizza.sandia.gov">info</A> <A HREF = "tars/pizza.tar.gz">download</A> ---
+analysis/plotting/viz for <A HREF = "https://www.lammps.org">LAMMPS</A>,
+<A HREF = "#chemcell">ChemCell</A>, <A HREF = "#spparks">SPPARKS</A>, <A HREF = "#sparta">SPARTA</A>, GPL
+license, 1.6 MB 
 <BR>
-<A HREF = "#gups">HPCC RandomAccess</A> --- algorithm for <A HREF = "http://icl.cs.utk.edu/hpcc/index.html">HPCC</A> GUPS benchmark, 22
-KB, <A HREF = "tars/paradyn.tar.gz">download</A> 
+HPCC RandomAccess <A HREF = "#gups">info</A> <A HREF = "tars/gups.tar.gz">download</A> ---
+algorithm for <A HREF = "http://icl.cs.utk.edu/hpcc/index.html">HPCC</A> GUPS benchmark, 22 KB 
 <BR>
-<A HREF = "#gene">Parallel GeneHunter</A> --- parallel genetic linkage analysis, 740 KB, <A HREF = "tars/paradyn.tar.gz">download</A> 
+Parallel GeneHunter <A HREF = "#gene">info</A>
+<A HREF = "tars/genehunter_mpi_64.tar.gz">download</A> --- parallel genetic linkage
+analysis, 740 KB 
 <BR>
-<A HREF = "#txt2html">txt2html</A> --- text file to HTML converter for 		     WWW pages and documentation, 19 KB, <A HREF = "tars/paradyn.tar.gz">download</A> 
+txt2html <A HREF = "#txt2html">info</A> <A HREF = "tars/txt2tml.tar.gz">download</A> --- text file
+to HTML converter for webpages and documentation, 19 KB 
 <BR>
+
+
 
 
 
