--- a/download.html
+++ b/download.html
@@ -49,7 +49,7 @@ LJ codes with different parallel algorithms, 47 KB
 <BR>
 <P><B>Other software:</B>
 </P>
-SPARTA <A HREF = "http://sparta.sandia.gov">info</A> <A HREF = "tars/sparta.tar.gz">download</A> --- Direct
+SPARTA (<A HREF = "http://sparta.sandia.gov">info</A> <A HREF = "tars/sparta.tar.gz">download</A>) --- Direct
 Simulation Monte Carlo (DSMC) simulator, GPL license, 4.4 MB 
 <BR>
 SPPARKS <A HREF = "http://spparks.sandia.gov">info</A> <A HREF = "tars/spparks.tar.gz">download</A> --- kinetic and
@@ -61,7 +61,7 @@ particle-based biological cell simulator, GPL license, 1.3 MB
 Mapreduce-MPI <A HREF = "http://mapreduce.sandia.gov">info</A> <A HREF = "tars/mapreduce.tar.gz">download</A> ---
 MapReduce-MPI library, modified BSD license, 1.8 MB 
 <BR>
-PHISH <A HREF = "http://www.sandia.gov/~sjplimp/phish.html">info</A> <A HREF = "tars/phish.tar.gz---">download</A> PHISH streaming
+PHISH <A HREF = "http://www.sandia.gov/~sjplimp/phish.html">info</A> <A HREF = "tars/phish.tar.gz">download</A> --- PHISH streaming
 library, modified BSD license, 1.3 MB 
 <BR>
 CSlib <A HREF = "http://cslib.sandia.gov">info</A> <A HREF = "tars/cslib.tar.gz">download</A> --- Client/server
@@ -82,7 +82,7 @@ Parallel GeneHunter <A HREF = "#gene">info</A>
 <A HREF = "tars/genehunter_mpi_64.tar.gz">download</A> --- parallel genetic linkage
 analysis, 740 KB 
 <BR>
-txt2html <A HREF = "#txt2html">info</A> <A HREF = "tars/txt2tml.tar.gz">download</A> --- text file
+txt2html <A HREF = "#txt2html">info</A> <A HREF = "tars/txt2html.tar.gz">download</A> --- text file
 to HTML converter for webpages and documentation, 19 KB 
 <BR>
 
