--- a/download.html
+++ b/download.html
@@ -38,53 +38,28 @@ from Sept 2004 thru Dec 2020.
 
 <P><B>Molecular dynamics codes:</B> 
 </P>
-LAMMPS <A HREF = "http://www.lammps.org">info</A> "download<A HREF = "https://www.lammps.org/download.html"></A>
---- general materials modeling MD code, 100+ MB 
-<BR>
-ParaDyn <A HREF = "#pd">info</A> <A HREF = "tars/paradyn.tar.gz">download</A> --- embedded atom
-method (EAM) code, 390 KB 
-<BR>
-Lennard-Jones <A HREF = "#lj">info</A>, <A HREF = "tars/paradyn.tar.gz">download</A> --- 3 minimal
-LJ codes with different parallel algorithms, 47 KB 
-<BR>
+<DIV ALIGN=center><TABLE  BORDER=2 >
+<TR ALIGN="left"><TD ><A HREF = "https://www.lammps.org">LAMMPS</A> </TD><TD > general materials modeling MD code </TD><TD  ALIGN ="center"> GPL/LGPL </TD><TD > 100+ MB </TD><TD > <A HREF = "https://www.lammps.org/download.html">download</A> </TD></TR>
+<TR ALIGN="left"><TD ><A HREF = "#pd">ParaDyn</A> </TD><TD > embedded atom method (EAM) code </TD><TD  ALIGN ="center"> - </TD><TD > 390 KB </TD><TD > <A HREF = "tars/paradyn.tar.gz">download</A> </TD></TR>
+<TR ALIGN="left"><TD ><A HREF = "lj">Lennard-Jones</A> </TD><TD > LJ codes with 3 parallel algorithms </TD><TD  ALIGN ="center"> - </TD><TD > 47 KB </TD><TD > <A HREF = "tars/paradyn.tar.gz">download</A>
+</TD></TR></TABLE></DIV>
+
 <P><B>Other software:</B>
 </P>
-SPARTA (<A HREF = "http://sparta.sandia.gov">info</A> <A HREF = "tars/sparta.tar.gz">download</A>) --- Direct
-Simulation Monte Carlo (DSMC) simulator, GPL license, 4.4 MB 
-<BR>
-SPPARKS <A HREF = "http://spparks.sandia.gov">info</A> <A HREF = "tars/spparks.tar.gz">download</A> --- kinetic and
-Metropolis Monte Carlo simulator, GPL license, 3.5 MB 
-<BR>
-ChemCell <A HREF = "http://chemcell.sandia.gov">info</A> <A HREF = "tars/chemcell.tar.gz">download</A> ---
-particle-based biological cell simulator, GPL license, 1.3 MB 
-<BR>
-Mapreduce-MPI <A HREF = "http://mapreduce.sandia.gov">info</A> <A HREF = "tars/mapreduce.tar.gz">download</A> ---
-MapReduce-MPI library, modified BSD license, 1.8 MB 
-<BR>
-PHISH <A HREF = "http://www.sandia.gov/~sjplimp/phish.html">info</A> <A HREF = "tars/phish.tar.gz">download</A> --- PHISH streaming
-library, modified BSD license, 1.3 MB 
-<BR>
-CSlib <A HREF = "http://cslib.sandia.gov">info</A> <A HREF = "tars/cslib.tar.gz">download</A> --- Client/server
-messaging library, modified BSD license, 1.0 MB 
-<BR>
-fftMPI <A HREF = "http://fftmpi.sandia.gov">info</A> <A HREF = "tars/fftmpi.tar.gz">download</A> --- parallel 3d/2d
-complex FFT library, BSD license, 0.9 MB 
-<BR>
-Pizza.py Toolkit <A HREF = "http://pizza.sandia.gov">info</A> <A HREF = "tars/pizza.tar.gz">download</A> ---
-analysis/plotting/viz for <A HREF = "https://www.lammps.org">LAMMPS</A>,
-<A HREF = "#chemcell">ChemCell</A>, <A HREF = "#spparks">SPPARKS</A>, <A HREF = "#sparta">SPARTA</A>, GPL
-license, 1.6 MB 
-<BR>
-HPCC RandomAccess <A HREF = "#gups">info</A> <A HREF = "tars/gups.tar.gz">download</A> ---
-algorithm for <A HREF = "http://icl.cs.utk.edu/hpcc/index.html">HPCC</A> GUPS benchmark, 22 KB 
-<BR>
-Parallel GeneHunter <A HREF = "#gene">info</A>
-<A HREF = "tars/genehunter_mpi_64.tar.gz">download</A> --- parallel genetic linkage
-analysis, 740 KB 
-<BR>
-txt2html <A HREF = "#txt2html">info</A> <A HREF = "tars/txt2html.tar.gz">download</A> --- text file
-to HTML converter for webpages and documentation, 19 KB 
-<BR>
+<DIV ALIGN=center><TABLE  BORDER=2 >
+<TR ALIGN="left"><TD ><A HREF = "https://sparta.github.io">SPARTA</A> </TD><TD > Direct Simulation Monte Carlo (DSMC) simulator </TD><TD  ALIGN ="center"> GPL </TD><TD > 4.4 MB </TD><TD > <A HREF = "tars/sparta.tar.gz">download</A> </TD></TR>
+<TR ALIGN="left"><TD ><A HREF = "https://spparks.github.io">SPPARKS</A> </TD><TD > Kinetic and Metropolis Monte Carlo simulator </TD><TD  ALIGN ="center"> GPL </TD><TD > 3.5 MB </TD><TD > <A HREF = "tars/spparks.tar.gz">download</A> </TD></TR>
+<TR ALIGN="left"><TD ><A HREF = "https://sjplimp.github.io/chemcell">ChemCell</A> </TD><TD > particle-based biological cell simulator </TD><TD  ALIGN ="center"> GPL </TD><TD > 1.3 MB </TD><TD > <A HREF = "tars/chemcell.tar.gz">download</A>  </TD></TR>
+<TR ALIGN="left"><TD ><A HREF = "https://sjplimp.github.io/mapreduce">Mapreduce-MPI</A> </TD><TD > MapReduce-MPI library </TD><TD  ALIGN ="center"> BSD </TD><TD > 1.8 MB </TD><TD > <A HREF = "tars/mapreduce.tar.gz">download</A> </TD></TR>
+<TR ALIGN="left"><TD ><A HREF = "https://sjplimp.github.io/phish">PHISH</A> </TD><TD > PHISH streaming library </TD><TD  ALIGN ="center"> BSD </TD><TD > 1.3 MB </TD><TD > <A HREF = "tars/phish.tar.gz">download</A> </TD></TR>
+<TR ALIGN="left"><TD ><A HREF = "https://lammps.github.io/cslib">CSlib</A> </TD><TD > client/server messaging library </TD><TD  ALIGN ="center"> BSD </TD><TD > 1.0 MB </TD><TD > <A HREF = "tars/cslib.tar.gz">download</A> </TD></TR>
+<TR ALIGN="left"><TD ><A HREF = "https://lammps.github.io/fftmpi">fftMPI</A> </TD><TD > parallel 3d/2d complex FFT library </TD><TD  ALIGN ="center"> BSD </TD><TD > 0.9 MB </TD><TD > <A HREF = "tars/fftmpi.tar.gz">download</A> </TD></TR>
+<TR ALIGN="left"><TD ><A HREF = "https://lammps.github.io/pizza">Pizza.py Toolkit</A> </TD><TD > analysis/plotting/viz for LAMMPS, SPARTA, SPPARKS, ChemCell </TD><TD  ALIGN ="center"> GPL </TD><TD > 1.6 MB </TD><TD > <A HREF = "tars/pizza.tar.gz">download</A> </TD></TR>
+<TR ALIGN="left"><TD ><A HREF = "#gups">HPCC RandomAccess</A> </TD><TD > algorithm for <A HREF = "http://icl.cs.utk.edu/hpcc/index.html">HPCC</A> GUPS benchmark </TD><TD  ALIGN ="center"> - </TD><TD > 22 KB </TD><TD > <A HREF = "tars/gups.tar.gz">download</A> </TD></TR>
+<TR ALIGN="left"><TD ><A HREF = "#gene">Parallel GeneHunter</A> </TD><TD > parallel genetic linkage analysis </TD><TD  ALIGN ="center"> - </TD><TD > 740 KB </TD><TD > <A HREF = "tars/genehunter_mpi_64.tar.gz">download</A> </TD></TR>
+<TR ALIGN="left"><TD ><A HREF = "#txt2html">txt2html</A> </TD><TD > text file to HTML converter for webpages and documentation </TD><TD  ALIGN ="center"> - </TD><TD > 19 KB </TD><TD > <A HREF = "tars/txt2html.tar.gz">download</A>
+</TD></TR></TABLE></DIV>
+
 
 
 
