remove links to papers sub-dir

--- a/algorithms.html
+++ b/algorithms.html
@@ -103,7 +103,6 @@ paper:
 RandomAccess Benchmark</B>, S. J. Plimpton, R. Brightwell, C. Vaughan,
 K. Underwood, M. Davis, Proc of Cluster 2006 - IEEE International Conf
 on Cluster Computing, Sept 2006. (<A HREF = "abstracts/cluster06.html">abstract</A>)
-(<A HREF = "papers/cluster06.pdf">pdf</A>)
 </P>
 <P>Collaborators on this project:
 </P>
@@ -198,12 +197,7 @@ algorithm and some performance results are given in this paper:
 <P><B>A Parallel Rendezvous Algorithm for Interpolation Between Multiple
 Grids</B>, S. J. Plimpton, B. Hendrickson, J. Stewart, J Parallel and
 Distributed Computing, 64, 266-276 (2004). (<A HREF = "abstracts/jpdc03a.html">abstract</A>)
-(<A HREF = "papers/jpdc03a.pdf">pdf</A>) (<A HREF = "papers/jpdc03a.pdf.gz">pdf.gz</A>)
 </P>
-
-
-
-
 
 
 <P>Collaborators on this project:
@@ -235,12 +229,7 @@ experimented with several dynamic algorithms in this conference paper:
 P. Diniz, S. J. Plimpton, B. Hendrickson, R. Leland, in Proc of 7th
 SIAM Conference on Parallel Processing for Scientific Computing, San
 Francisco, CA, February 1995, p 615. (<A HREF = "abstracts/siam95.html">abstract</A>)
-(<A HREF = "papers/siam95.ps">postscript</A>) (<A HREF = "papers/siam95.ps.gz">ps.gz</A>)
 </P>
-
-
-
-
 
 
 <P>More recently, Sandia has developed a dynamic load-balancing library,
@@ -305,12 +294,8 @@ different applications can be architected from basic primitives:
 <P><B>Tinkertoy Parallel Programming: Complicated Applications from Simple
 Tools</B>, B.  Hendrickson and S. J. Plimpton, in Proc of SIAM Parallel
 Processing for Scientific Computing Conf, March
-2001. (<A HREF = "abstracts/siam01b.html">abstract</A>) (<A HREF = "papers/siam01b.ps">postscript</A>) (<A HREF = "papers/siam01b.ps.gz">ps.gz</A>)
+2001. (<A HREF = "abstracts/siam01b.html">abstract</A>)
 </P>
-
-
-
-
 
 
 <P>Collaborators on this project:
@@ -332,13 +317,8 @@ this paper:
 </P>
 <P><B>Parallel Many-Body Simulations Without All-to-All Communication</B>,
 B. A.  Hendrickson and S. J. Plimpton, J Parallel and Distributed
-Computing, 27, 15-25 (1995). (<A HREF = "abstracts/jpdc95.html">abstract</A>) (<A HREF = "papers/jpdc95.ps">postscript</A>)
-(<A HREF = "papers/jpdc95.ps.gz">ps.gz</A>)
+Computing, 27, 15-25 (1995). (<A HREF = "abstracts/jpdc95.html">abstract</A>)
 </P>
-
-
-
-
 
 
 <P>The application of the force-decomposition idea to general many-body
@@ -347,13 +327,8 @@ paper:
 </P>
 <P><B>An Efficient Parallel Algorithm for Matrix-Vector Multiplication</B>,
 B. A.  Hendrickson, R. W. Leland, S. J. Plimpton, Int J of High Speed
-Computing, 7, 73-88 (1995). (<A HREF = "abstracts/ijhsc95.html">abstract</A>) (<A HREF = "papers/ijhsc95.ps">postscript</A>)
-(<A HREF = "papers/ijhsc95.ps.gz">ps.gz</A>)
+Computing, 7, 73-88 (1995). (<A HREF = "abstracts/ijhsc95.html">abstract</A>)
 </P>
-
-
-
-
 
 
 <P>Collaborators on this project:
