--- a/cell.html
+++ b/cell.html
@@ -106,10 +106,8 @@ challenges for cell modeling:
 </P>
 <P><B>Microbial cell modeling via reacting diffusing particles</B>,
 S. J. Plimpton and A. Slepoy, Journal of Physics: Conference Series
-16, 305-309 (2005). (<A HREF = "abstracts/jp05.html">abstract</A>) (<A HREF = "papers/jp05.pdf">pdf</A>)
+16, 305-309 (2005). (<A HREF = "abstracts/jp05.html">abstract</A>)
 </P>
-
-
 
 
 <P>This paper is about our <A HREF = "http://www.genomes2life.org">Genomics:GTL (Genomes-to-Life) project</A>
