--- a/chisels.html
+++ b/chisels.html
@@ -40,10 +40,8 @@ fabrication:
 <P><B>Feature Length-Scale Modeling of LPCVD and PECVD MEMS Fabrication
 Processes</B>, L. C. Musson, P. Ho, S. J. Plimpton, R. C. Schmidt,
 Journal of Microsystems Technologies, 12, 137-142
-(2005). (<A HREF = "abstracts/jmt05.html">abstract</A>) (<A HREF = "papers/jmt05.pdf">pdf</A>)
+(2005). (<A HREF = "abstracts/jmt05.html">abstract</A>)
 </P>
-
-
 
 
 <HR>
@@ -54,10 +52,8 @@ geometric modeler:
 <P><B>Development and Performance of a PVM Based Parallel Geometric Modeler
 for MEMS</B>, C. Jorgensen, D. Melander, R. Schmidt, S. J. Plimpton, in
 Proc of Modeling and Simulation of Microsystems (MSM), Puerto Rico,
-April 2002, 218-221. (<A HREF = "abstracts/msm02.html">abstract</A>) (<A HREF = "papers/msm02.pdf">pdf</A>)
+April 2002, 218-221. (<A HREF = "abstracts/msm02.html">abstract</A>)
 </P>
-
-
 
 
 </HTML>
