--- a/download.html
+++ b/download.html
@@ -105,12 +105,7 @@ ParaDyn if you're sure it's what you want.
 S. J. Plimpton and B. A. Hendrickson, in Materials Theory and
 Modelling, edited by J. Broughton, P. Bristowe, and J. Newsam, MRS
 Proceedings 291, Pittsburgh, PA, 1993, p 37.  (<A HREF = "abstracts/mrs92.html">abstract</A>)
-(<A HREF = "papers/mrs92.ps">postscript</A>) (<A HREF = "papers/mrs92.ps.gz">ps.gz</A>)
 </P>
-
-
-
-
 
 
 <HR>
@@ -130,14 +125,8 @@ with a wrapper on a vanilla MPI send and receive that was added later.
 
 <P><B>Fast Parallel Algorithms for Short-Range Molecular Dynamics</B>,
 S. J. Plimpton, J Comp Phys, 117, 1-19
-(1995). (<A HREF = "abstracts/jcompphys95.html">abstract</A>) (<A HREF = "papers/jcompphys95.pdf">pdf</A>) (<A HREF = "papers/jcompphys95_figs.tar.gz">tar
-file</A> of figures if they don't display correctly in the
-PDF file)
+(1995). (<A HREF = "abstracts/jcompphys95.html">abstract</A>)
 </P>
-
-
-
-
 
 
 <HR>
@@ -179,12 +168,8 @@ Gavin did the bulk of this work and supports the modified code.
 Distributed-Memory Architectures</B>, G. C. Conant, S. J. Plimpton,
 W. Old, A.  Wagner, P. R. Fain, T. R. Pacheco, and G. Heffelfinger,
 Journal of Parallel and Distributed Computing, 63, 674-682
-(2003). (<A HREF = "abstracts/jpdc03.html">abstract</A>) (<A HREF = "papers/jpdc03.pdf">pdf</A>) (<A HREF = "papers/jpdc03.pdf.gz">pdf.gz</A>)
+(2003). (<A HREF = "abstracts/jpdc03.html">abstract</A>)
 </P>
-
-
-
-
 
 
 <HR>
