--- a/dsmc.html
+++ b/dsmc.html
@@ -117,12 +117,7 @@ Sandia.
 <P><B>Parallel Particle Simulations of Low-Density Fluid Flows</B>,
 S. J. Plimpton and T.  J. Bartel, in Proc of High Performance
 Computing 1994, San Diego, CA, April 1994, p 31. (<A HREF = "abstracts/hpc94.html">abstract</A>)
-(<A HREF = "papers/hpc94.ps">postscript</A>) (<A HREF = "papers/hpc94.ps.gz">ps.gz</A>)
 </P>
-
-
-
-
 
 
 <P><B>Direct Monte Carlo Simulation of Ionized Rarefied Flows on Large MIMD
@@ -137,12 +132,8 @@ Vancouver, Canada, July 1992, published by AIAA, A94-30156, p
 Supercomputers</B>, S. J. Plimpton and T. J. Bartel, in Proc of Scalable
 High Performance Computing Conference, Williamsburg, VA, April 1992, p
 212, and in Computing Systems in Engineering, 3, 333-336
-(1992). (<A HREF = "abstracts/shpcc92.html">abstract</A>) (<A HREF = "papers/shpcc92.ps">postscript</A>) (<A HREF = "papers/shpcc92.ps.gz">ps.gz</A>)
+(1992). (<A HREF = "abstracts/shpcc92.html">abstract</A>)
 </P>
-
-
-
-
 
 
 </HTML>
