--- a/ebeam.html
+++ b/ebeam.html
@@ -101,12 +101,8 @@ S. J. Plimpton, A. D. Romig Jr., Ultramicroscopy, 51, 160-167
 <P><B>Parallel Simulation of Electron-Solid Interactions for
 Electron-Microscopy Modeling</B>, S. J. Plimpton, J. R. Michael,
 A. D. Romig, Jr., J of SuperComputing, 6, 139-151
-(1992). (<A HREF = "abstracts/jsc92.html">abstract</A>) (<A HREF = "papers/jsc92.ps">postscript</A>) (<A HREF = "papers/jsc92.ps.gz">ps.gz</A>)
+(1992). (<A HREF = "abstracts/jsc92.html">abstract</A>)
 </P>
-
-
-
-
 
 
 </HTML>
