--- a/genehunter.html
+++ b/genehunter.html
@@ -61,12 +61,8 @@ implementation of Genehunter.
 Distributed-Memory Architectures</B>, G. C. Conant, S. J. Plimpton,
 W. Old, A.  Wagner, P. R. Fain, T. R. Pacheco, and G. Heffelfinger,
 Journal of Parallel and Distributed Computing, 63, 674-682
-(2003). (<A HREF = "abstracts/jpdc03.html">abstract</A>) (<A HREF = "papers/jpdc03.pdf">pdf</A>) (<A HREF = "papers/jpdc03.pdf.gz">pdf.gz</A>)
+(2003). (<A HREF = "abstracts/jpdc03.html">abstract</A>)
 </P>
-
-
-
-
 
 
 <HR>
