--- a/hpc.html
+++ b/hpc.html
@@ -217,13 +217,8 @@ benchmarks running on CPlant.
 </P>
 <P><B>Scalability and Performance of a Two Large Linux Clusters</B>,
 R. Brightwell and S.  J. Plimpton, J of Parallel and Distributed
-Computing, 61, 1546-1569 (2001).  (<A HREF = "abstracts/jpdc01.html">abstract</A>) (<A HREF = "papers/jpdc01.ps">postscript</A>)
-(<A HREF = "papers/jpdc01.ps.gz">ps.gz</A>)
+Computing, 61, 1546-1569 (2001).  (<A HREF = "abstracts/jpdc01.html">abstract</A>)
 </P>
-
-
-
-
 
 
 </HTML>
