--- a/index.html
+++ b/index.html
@@ -48,10 +48,11 @@
 </table>
 
 <P>I'm a staff member at <A HREF = "http://www.sandia.gov">Sandia National Laboratories</A>, a US
-<A HREF = "http://www.doe.gov">Department of Energy</A> lab, in the <A HREF = "http://www.cs.sandia.gov">Center for Computing
-Research</A>.  I'm currently in the Multiscale Science department.
-Previously I've been in the Scalable Algorithms, Computational
-Biology, and Parallel Computational Sciences departments.
+<A HREF = "http://www.doe.gov">Department of Energy</A> lab, in the <A HREF = "https://cfwebprod.sandia.gov/cfdocs/CompResearch/index.cfm">Center for Computing
+Research</A>.  I'm currently in the Computational Multiscale
+department.  Previously I've been in the Scalable Algorithms,
+Computational Biology, and Parallel Computational Sciences
+departments.
 </P>
 <P>My research involves implementing and using scientific simulations
 designed for parallel supercomputers, which often requires creation of
@@ -159,7 +160,7 @@ Molecular Dynamics (MD):
 
 <P>
 </P>
-Multiscale Science Dept, MS 1316<BR>
+Computational Multiscale Dept, MS 1316<BR>
 Sandia National Laboratories<BR>
 Albuquerque, NM 87185-1316 <BR>
 
@@ -167,7 +168,7 @@ Albuquerque, NM 87185-1316 <BR>
 
 <A NAME = "rsl"></A><H3>Related Sandia Links 
 </H3>
-<A HREF = "http://www.cs.sandia.gov">Center for Computing Research</A><BR>
+<A HREF = "https://cfwebprod.sandia.gov/cfdocs/CompResearch/index.cfm">Center for Computing Research</A><BR>
 <A HREF = "https://cfwebprod.sandia.gov/cfdocs/CompResearch/templates/insert/research.cfm">Center research</A><BR>
 <A HREF = "https://cfwebprod.sandia.gov/cfdocs/CompResearch/templates/insert/org_chart.cfm">Center staff members</A><BR>
 <A HREF = "http://www.sandia.gov">Sandia National Laboratories</A><BR>
