--- a/kmc.html
+++ b/kmc.html
@@ -75,10 +75,9 @@ as one section:
 <P><B>Crossing the Mesoscale No-Man's Land via Parallel Kinetic Monte
 Carlo</B>, S. Plimpton, C. Battaile, M. Chandross, L. Holm,
 A. Thompson, V. Tikare, G. Wagner, E. Webb, X. Zhou, C. Garcia
-Cardona, A. Slepoy, Sandia report SAND2009-6226, October
+Cardona, A. Slepoy, Sandia Report SAND2009-6226, October
 2009. (<A HREF = "abstracts/sand09.html">abstract</A>)
 </P>
-<P>You can download the entire report via <A HREF = "papers/sand09.pdf">this
-link</A>, but note that it is a 45 Mb file!
+<P>You can download the entire report via <A HREF = "papers/sand09.pdf">this link</A>.
 </P>
 </HTML>
