--- a/md.html
+++ b/md.html
@@ -52,14 +52,8 @@ box to each proc.
 </P>
 <P><B>Fast Parallel Algorithms for Short-Range Molecular Dynamics</B>,
 S. J. Plimpton, J Comp Phys, 117, 1-19
-(1995). (<A HREF = "abstracts/jcompphys95.html">abstract</A>) (<A HREF = "papers/jcompphys95.pdf">pdf</A>) (<A HREF = "papers/jcompphys95_figs.tar.gz">tar
-file</A> of figures if they don't display correctly in the
-PDF file)
+(1995). (<A HREF = "abstracts/jcompphys95.html">abstract</A>)
 </P>
-
-
-
-
 
 
 <P>The Lennard-Jones codes discussed in the paper that implement the
@@ -166,12 +160,8 @@ terms within each molecule's topology.
 Systems</B>, S.  J. Plimpton and B. A. Hendrickson, chapter in Parallel
 Computing in Computational Chemistry, edited by T. G. Mattson,
 published by the American Chemical Society, Symposium Series 592,
-114-132 (1995). (<A HREF = "abstracts/acs95.html">abstract</A>) (<A HREF = "papers/acs95.ps">postscript</A>) (<A HREF = "papers/acs95.ps.gz">ps.gz</A>)
+114-132 (1995). (<A HREF = "abstracts/acs95.html">abstract</A>)
 </P>
-
-
-
-
 
 
 <HR>
@@ -187,12 +177,7 @@ Stephen Foiles and Murray Daw, and which is available for download
 S. J. Plimpton and B. A. Hendrickson, in Materials Theory and
 Modelling, edited by J. Broughton, P. Bristowe, and J. Newsam, MRS
 Proceedings 291, Pittsburgh, PA, 1993, p 37.  (<A HREF = "abstracts/mrs92.html">abstract</A>)
-(<A HREF = "papers/mrs92.ps">postscript</A>) (<A HREF = "papers/mrs92.ps.gz">ps.gz</A>)
 </P>
-
-
-
-
 
 
 <HR>
@@ -204,13 +189,8 @@ ParBond; it has since been superceded by our
 </P>
 <P><B>A New Parallel Method for Molecular-Dynamics Simulation of
 Macromolecular Systems</B>, S. J. Plimpton and B. A. Hendrickson, J Comp
-Chem, 17, 326-337 (1996).  (<A HREF = "abstracts/jcc96.html">abstract</A>) (<A HREF = "papers/jcc96.ps">postscript</A>)
-(<A HREF = "papers/jcc96.ps.gz">ps.gz</A>)
+Chem, 17, 326-337 (1996).  (<A HREF = "abstracts/jcc96.html">abstract</A>) 
 </P>
-
-
-
-
 
 
 <HR>
@@ -223,12 +203,7 @@ its parallel algorithms are discussed in this paper.
 Simulations</B>, S. J. Plimpton, R. Pollock, M. Stevens, in Proc of the
 Eighth SIAM Conference on Parallel Processing for Scientific
 Computing, Minneapolis, MN, March 1997. (<A HREF = "abstracts/siam97.html">abstract</A>)
-(<A HREF = "papers/siam97.ps">postscript</A>) (<A HREF = "papers/siam97.ps.gz">ps.gz</A>)
 </P>
-
-
-
-
 
 
 <HR>
@@ -239,12 +214,8 @@ future.
 </P>
 <P><B>Computational Limits of Classical Molecular-Dynamics Simulations</B>,
 S. J.  Plimpton, Computational Materials Science, 4, 361-364
-(1995). (<A HREF = "abstracts/cms95.html">abstract</A>) (<A HREF = "papers/cms95.ps">postscript</A>) (<A HREF = "papers/cms95.ps.gz">ps.gz</A>)
+(1995). (<A HREF = "abstracts/cms95.html">abstract</A>)
 </P>
-
-
-
-
 
 
 </HTML>
