--- a/nimrod.html
+++ b/nimrod.html
@@ -76,10 +76,8 @@ NIMROD, as well as illustrate some simulation results.
 A. H. Glasser, C.  R. Sovinec, R. A. Nebel, T. A. Gianakon,
 S. J. Plimpton, M. S. Chu, D. D.  Schnack, and the NIMROD Team, Plasma
 Physics and Controlled Fusion, 41, A747- A755
-(1999). (<A HREF = "abstracts/plasma99.html">abstract</A>) (<A HREF = "papers/HTML/plasma99/plasma99.html">html</A>)
+(1999). (<A HREF = "abstracts/plasma99.html">abstract</A>)
 </P>
-
-
 
 
 <P><B>Nonlinear Magnetohydrodynamics Simulation Using High-order Finite
