--- a/overview.html
+++ b/overview.html
@@ -20,35 +20,22 @@ favorite hammer on!
 <P><B>Massively Parallel Computing: A Sandia Perspective</B>, D. E. Womble,
 S. S.  Dosanjh, B. A. Hendrickson, M. A. Heroux, S. J. Plimpton,
 J. L. Tomkins, D. S.  Greenberg, Parallel Computing, 25, 1853-1876
-(1999). (<A HREF = "abstracts/parco99.html">abstract</A>) (<A HREF = "papers/parco99.ps">ps</A>) (<A HREF = "papers/parco99.ps.gz">ps.gz</A>)
+(1999). (<A HREF = "abstracts/parco99.html">abstract</A>)
 </P>
-
-
-
-
 
 
 <P><B>Massively-Parallel Methods for Engineering and Science Problems</B>,
 W. J. Camp, S.  J. Plimpton, B. A. Hendrickson, R. W. Leland,
 Communications of the ACM, 37, 31-41 (1994). (<A HREF = "abstracts/cacm94.html">abstract</A>)
-(<A HREF = "papers/cacm94.ps">postscript</A>) (<A HREF = "papers/cacm94.ps.gz">ps.gz</A>)
 </P>
-
-
-
-
 
 
 <P><B>Is SIMD Enough for Scientific and Engineering Applications on
 Massively Parallel Computers ?</B>, S. J. Plimpton, S. S. Dosanjh,
 R. B. Krall, in Proc of 37th IEEE International Computer Conference,
 COMPCON '92, San Francisco, CA, February 1992. p
-95-102. (<A HREF = "abstracts/compcon92.html">abstract</A>) (<A HREF = "papers/compcon92.ps">postscript</A>) (<A HREF = "papers/compcon92.ps.gz">ps.gz</A>)
+95-102. (<A HREF = "abstracts/compcon92.html">abstract</A>)
 </P>
-
-
-
-
 
 
 </HTML>
