--- a/papers.html
+++ b/papers.html
@@ -262,7 +262,6 @@ Engineering, 4, 37-54 (2011).  (<A HREF = "abstracts/ijcmsse11.html">abstract</A
 <P><B>MapReduce in MPI for Large-Scale Graph Algorithms</B>, S. J. Plimpton
 and K. D. Devine, Parallel Computing, 37, 610-632
 (2011). (<A HREF = "../abstracts/pc11.html">abstract</A>)
-(<A HREF = "../papers/pc11.pdf">preprint</A>)
 </P>
 <HR>
 
@@ -353,7 +352,6 @@ Nature Materials, 5, 124-127
 RandomAccess Benchmark</B>, S. J. Plimpton, R. Brightwell, C. Vaughan,
 K. Underwood, M. Davis, Proc of Cluster 2006 - IEEE International Conf
 on Cluster Computing, Sept 2006. (<A HREF = "abstracts/cluster06.html">abstract</A>)
-(<A HREF = "papers/cluster06.pdf">pdf</A>)
 </P>
 <HR>
 
@@ -361,33 +359,23 @@ on Cluster Computing, Sept 2006. (<A HREF = "abstracts/cluster06.html">abstract<
 </H4>
 <P><B>Microbial cell modeling via reacting diffusing particles</B>,
 S. J. Plimpton and A. Slepoy, Journal of Physics: Conference Series
-16, 305-309 (2005). (<A HREF = "abstracts/jp05.html">abstract</A>) (<A HREF = "papers/jp05.pdf">pdf</A>)
+16, 305-309 (2005). (<A HREF = "abstracts/jp05.html">abstract</A>)
 </P>
-
-
 
 
 <P><B>Parallel Sn Sweeps on Unstructured Grids: Algorithms for
 Prioritization, Grid Partitioning, and Cycle-Detection</B>,
 S. J. Plimpton, B. Hendrickson, S. Burns, W. Mclendon III, L.
 Rauchwerger, Nuclear Science and Engineering, 150, 267-283 (2005).
-(<A HREF = "abstracts/nse05.html">abstract</A>) (<A HREF = "papers/nse05.ps">postscript</A>) (<A HREF = "papers/nse05.ps.gz">ps.gz</A>)
+(<A HREF = "abstracts/nse05.html">abstract</A>)
 </P>
-
-
-
-
 
 
 <P><B>Finding Strongly Connected Components in Distributed Graphs</B>,
 W. McLendon, B. Hendrickson, S. J. Plimpton, L. Rauchwerger, J
 Parallel and Distributed Computing, 65, 901-910 (2005).
-(<A HREF = "abstracts/jpdc05.html">abstract</A>) (<A HREF = "papers/jpdc05.pdf">pdf</A>) (<A HREF = "papers/jpdc05.pdf.gz">pdf.gz</A>)
+(<A HREF = "abstracts/jpdc05.html">abstract</A>)
 </P>
-
-
-
-
 
 
 <P><B>Effect of Deformation Path Sequence on the Behavior of Nanoscale
@@ -398,10 +386,8 @@ D. L. McDowell, S. J. Plimpton, J Engr Materials and Technology, 127,
 <P><B>Feature Length-Scale Modeling of LPCVD and PECVD MEMS Fabrication
 Processes</B>, L. C. Musson, P. Ho, S. J. Plimpton, R. C. Schmidt,
 Journal of Microsystems Technologies, 12, 137-142
-(2005). (<A HREF = "abstracts/jmt05.html">abstract</A>) (<A HREF = "papers/jmt05.pdf">pdf</A>)
+(2005). (<A HREF = "abstracts/jmt05.html">abstract</A>)
 </P>
-
-
 
 
 <HR>
@@ -428,12 +414,7 @@ and M. S. Chu, J Comp Phys, 195, 355-386 (2004). (<A HREF = "abstracts/jcp04.htm
 <P><B>A Parallel Rendezvous Algorithm for Interpolation Between Multiple
 Grids</B>, S. J. Plimpton, B. Hendrickson, J. Stewart, J Parallel and
 Distributed Computing, 64, 266-276 (2004). (<A HREF = "abstracts/jpdc03a.html">abstract</A>)
-(<A HREF = "papers/jpdc03a.pdf">pdf</A>) (<A HREF = "papers/jpdc03a.pdf.gz">pdf.gz</A>)
 </P>
-
-
-
-
 
 
 <HR>
@@ -452,23 +433,15 @@ Phys, 119, 12718-12728 (2003). (<A HREF = "abstracts/jcp03.html">abstract</A>)
 Distributed-Memory Architectures</B>, G. C. Conant, S. J. Plimpton,
 W. Old, A.  Wagner, P. R. Fain, T. R. Pacheco, and G. Heffelfinger,
 Journal of Parallel and Distributed Computing, 63, 674-682
-(2003). (<A HREF = "abstracts/jpdc03.html">abstract</A>) (<A HREF = "papers/jpdc03.pdf">pdf</A>) (<A HREF = "papers/jpdc03.pdf.gz">pdf.gz</A>)
+(2003). (<A HREF = "abstracts/jpdc03.html">abstract</A>)
 </P>
-
-
-
-
 
 
 <P><B>A Load-Balancing Algorithm for a Parallel Electromagnetic
 Particle-in-Cell Code</B>, S. J. Plimpton, D. B. Seidel, M. F. Pasik,
 R. S. Coats, G. R. Montry, Comp Phys Comm, 152, 227-241 (2003).
-(<A HREF = "abstracts/cpc03.html">abstract</A>) (<A HREF = "papers/cpc03.pdf">pdf</A>) (<A HREF = "papers/cpc03.pdf.gz">pdf.gz</A>)
+(<A HREF = "abstracts/cpc03.html">abstract</A>)
 </P>
-
-
-
-
 
 
 <HR>
@@ -488,10 +461,8 @@ S. J. Plimpton, J of Engineering Materials and Technology
 <P><B>Development and Performance of a PVM Based Parallel Geometric Modeler
 for MEMS</B>, C. Jorgensen, D. Melander, R. Schmidt, S. J. Plimpton, in
 Proc of Modeling and Simulation of Microsystems (MSM), Puerto Rico,
-April 2002, 218-221. (<A HREF = "abstracts/msm02.html">abstract</A>) (<A HREF = "papers/msm02.pdf">pdf</A>)
+April 2002, 218-221. (<A HREF = "abstracts/msm02.html">abstract</A>)
 </P>
-
-
 
 
 <P><B>Carbon Sequestration in Synechococcus Sp.: From Molecular Machines to
@@ -520,34 +491,21 @@ S. J. Plimpton, Phys Rev E, 64, 051302
 <P><B>Identifying Strongly Connected Components in Parallel</B>, W. McLendon
 III, B.  Hendrickson, S. J. Plimpton, L. Rauchwerger, in Proc of SIAM
 Parallel Processing for Scientific Computing Conf, March
-2001. (<A HREF = "abstracts/siam01a.html">abstract</A>) (<A HREF = "papers/siam01a.ps">postscript</A>) (<A HREF = "papers/siam01a.ps.gz">ps.gz</A>)
+2001. (<A HREF = "abstracts/siam01a.html">abstract</A>)
 </P>
-
-
-
-
 
 
 <P><B>Scalability and Performance of Two Large Linux Clusters</B>,
 R. Brightwell and S. J. Plimpton, J of Parallel and Distributed
 Computing, 61, 1546-1569 (2001).  (<A HREF = "abstracts/jpdc01.html">abstract</A>)
-(<A HREF = "papers/jpdc01.ps">postscript</A>) (<A HREF = "papers/jpdc01.ps.gz">ps.gz</A>)
 </P>
-
-
-
-
 
 
 <P><B>Tinkertoy Parallel Programming: Complicated Applications from Simple
 Tools</B>, B.  Hendrickson and S. J. Plimpton, in Proc of SIAM Parallel
 Processing for Scientific Computing Conf, March
-2001. (<A HREF = "abstracts/siam01b.html">abstract</A>) (<A HREF = "papers/siam01b.ps">postscript</A>) (<A HREF = "papers/siam01b.ps.gz">ps.gz</A>)
+2001. (<A HREF = "abstracts/siam01b.html">abstract</A>)
 </P>
-
-
-
-
 
 
 <HR>
@@ -557,12 +515,8 @@ Processing for Scientific Computing Conf, March
 <P><B>Parallel Algorithms for Radiation Transport on Unstructured Grids</B>,
 S. J. Plimpton, B. A. Hendrickson, S. P. Burns, W. McLendon III, Proc
 of SuperComputing 2000 (SC2000), Dallas, TX, November
-2000. (<A HREF = "abstracts/sc00.html">abstract</A>) (<A HREF = "papers/sc00.ps">postscript</A>) (<A HREF = "papers/sc00.ps.gz">ps.gz</A>)
+2000. (<A HREF = "abstracts/sc00.html">abstract</A>)
 </P>
-
-
-
-
 
 
 <P><B>Parallel Strategies for Crash and Impact Simulations</B>, K. Brown,
@@ -588,21 +542,15 @@ J. G. Curro, J Chem Phys, 111, 9822-9831
 A. H. Glasser, C.  R. Sovinec, R. A. Nebel, T. A. Gianakon,
 S. J. Plimpton, M. S. Chu, D. D.  Schnack, and the NIMROD Team, Plasma
 Physics and Controlled Fusion, 41, A747- A755
-(1999). (<A HREF = "abstracts/plasma99.html">abstract</A>) (<A HREF = "papers/HTML/plasma99/plasma99.html">html</A>)
+(1999). (<A HREF = "abstracts/plasma99.html">abstract</A>)
 </P>
-
-
 
 
 <P><B>Massively Parallel Computing: A Sandia Perspective</B>, D. E. Womble,
 S. S. Dosanjh, B. A. Hendrickson, M. A. Heroux, S. J. Plimpton,
 J. L. Tomkins, D. S. Greenberg, Parallel Computing, 25, 1853-1876
-(1999). (<A HREF = "abstracts/parco99.html">abstract</A>) (<A HREF = "papers/parco99.ps">ps</A>) (<A HREF = "papers/parco99.ps.gz">ps.gz</A>)
+(1999). (<A HREF = "abstracts/parco99.html">abstract</A>)
 </P>
-
-
-
-
 
 
 <HR>
@@ -635,12 +583,8 @@ of Appl Phys, 83, 4055-4063 (1998). (<A HREF = "abstracts/jap98.html">abstract</
 Detection and Smoothed Particle Hydrodynamics</B>, S. J. Plimpton,
 S. Attaway, B. Hendrickson, J.  Swegle, C. Vaughan, D. Gardner, J
 Parallel and Distributed Computing, 50, 104- 122
-(1998). (<A HREF = "abstracts/jpdc98.html">abstract</A>) (<A HREF = "papers/jpdc98.ps">postscript</A>) (<A HREF = "papers/jpdc98.ps.gz">ps.gz</A>)
+(1998). (<A HREF = "abstracts/jpdc98.html">abstract</A>)
 </P>
-
-
-
-
 
 
 <P><B>A Parallel Contact Detection Algorithm for Transient Solid Dynamics
@@ -666,12 +610,7 @@ published by World Scientific, 61-95 (1998). (<A HREF = "abstracts/fong98.html">
 Simulations</B>, S. J. Plimpton, R. Pollock, M. Stevens, in Proc of the
 Eighth SIAM Conference on Parallel Processing for Scientific
 Computing, Minneapolis, MN, March 1997.  (<A HREF = "abstracts/siam97.html">abstract</A>)
-(<A HREF = "papers/siam97.ps">postscript</A>) (<A HREF = "papers/siam97.ps.gz">ps.gz</A>)
 </P>
-
-
-
-
 
 
 <P><B>Dynamical heterogeneities in a supercooled Lennard-Jones liquid</B>,
@@ -687,10 +626,8 @@ S. J. Plimpton, J. G. Curro, J Chem Phys, 107, 4024-4032
 Computer</B>, S.  Attaway, T. Barragy, K. Brown, D. Gardner,
 B. Hendrickson, S. J. Plimpton, C.  Vaughan, Gordon Bell finalist
 paper, in Proc of SuperComputing '97, San Jose, CA, November
-1997. (<A HREF = "abstracts/sc97.html">abstract</A>) (<A HREF = "papers/HTML/sc97/sc97.html">html</A>)
+1997. (<A HREF = "abstracts/sc97.html">abstract</A>)
 </P>
-
-
 
 
 <P><B>Potts-model Grain Growth Simulations: Parallel Algorithms and
@@ -707,22 +644,15 @@ M. F. Young, E. A. Holm, SAND Report 97-1925, August
 <P><B>A New Parallel Method for Molecular-Dynamics Simulation of
 Macromolecular Systems</B>, S. J. Plimpton and B. A. Hendrickson, J Comp
 Chem, 17, 326-337 (1996).  (<A HREF = "abstracts/jcc96.html">abstract</A>)
-(<A HREF = "papers/jcc96.ps">postscript</A>) (<A HREF = "papers/jcc96.ps.gz">ps.gz</A>)
 </P>
-
-
-
-
 
 
 <P><B>Transient Dynamics Simulations: Parallel Algorithms for Contact
 Detection and Smoothed Particle Hydrodynamics</B>, S. J. Plimpton,
 S. Attaway, B. Hendrickson, J.  Swegle, C. Vaughan, D. Gardner, in
 Proc of SuperComputing '96, Pittsburgh, PA, November
-1996. (<A HREF = "abstracts/sc96.html">abstract</A>) (<A HREF = "papers/HTML/sc96/sc96.html">html</A>)
+1996. (<A HREF = "abstracts/sc96.html">abstract</A>)
 </P>
-
-
 
 
 <HR>
@@ -731,36 +661,22 @@ Proc of SuperComputing '96, Pittsburgh, PA, November
 </H4>
 <P><B>Fast Parallel Algorithms for Short-Range Molecular Dynamics</B>,
 S. J. Plimpton, J Comp Phys, 117, 1-19
-(1995). (<A HREF = "abstracts/jcompphys95.html">abstract</A>) (<A HREF = "papers/jcompphys95.pdf">pdf</A>) (<A HREF = "papers/jcompphys95_figs.tar.gz">tar
-file</A> of figures if they don't display correctly in the
-PDF file)
+(1995). (<A HREF = "abstracts/jcompphys95.html">abstract</A>)
 </P>
-
-
-
-
 
 
 <P><B>Parallel Molecular Dynamics Algorithms for Simulation of Molecular
 Systems</B>, S.  J. Plimpton and B. A. Hendrickson, chapter in Parallel
 Computing in Computational Chemistry, edited by T. G. Mattson,
 published by the American Chemical Society, Symposium Series 592,
-114-132 (1995). (<A HREF = "abstracts/acs95.html">abstract</A>) (<A HREF = "papers/acs95.ps">postscript</A>) (<A HREF = "papers/acs95.ps.gz">ps.gz</A>)
+114-132 (1995). (<A HREF = "abstracts/acs95.html">abstract</A>)
 </P>
-
-
-
-
 
 
 <P><B>Computational Limits of Classical Molecular-Dynamics Simulations</B>,
 S. J.  Plimpton, Computational Materials Science, 4, 361-364
-(1995). (<A HREF = "abstracts/cms95.html">abstract</A>) (<A HREF = "papers/cms95.ps">postscript</A>) (<A HREF = "papers/cms95.ps.gz">ps.gz</A>)
+(1995). (<A HREF = "abstracts/cms95.html">abstract</A>)
 </P>
-
-
-
-
 
 
 <P><B>Molecular dynamics simulation of athermal polymer blends: Comparison
@@ -790,34 +706,19 @@ J Materials Research, 10, 1589-1592
 P. Diniz, S. J. Plimpton, B. Hendrickson, R. Leland, in Proc of 7th
 SIAM Conference on Parallel Processing for Scientific Computing, San
 Francisco, CA, February 1995, p 615. (<A HREF = "abstracts/siam95.html">abstract</A>)
-(<A HREF = "papers/siam95.ps">postscript</A>) (<A HREF = "papers/siam95.ps.gz">ps.gz</A>)
 </P>
-
-
-
-
 
 
 <P><B>Parallel Many-Body Simulations Without All-to-All Communication</B>,
 B. A.  Hendrickson and S. J. Plimpton, J Parallel and Distributed
-Computing, 27, 15-25 (1995). (<A HREF = "abstracts/jpdc95.html">abstract</A>) (<A HREF = "papers/jpdc95.ps">postscript</A>)
-(<A HREF = "papers/jpdc95.ps.gz">ps.gz</A>)
+Computing, 27, 15-25 (1995). (<A HREF = "abstracts/jpdc95.html">abstract</A>)
 </P>
-
-
-
-
 
 
 <P><B>An Efficient Parallel Algorithm for Matrix-Vector Multiplication</B>,
 B. A.  Hendrickson, R. W. Leland, S. J. Plimpton, Int J of High Speed
-Computing, 7, 73-88 (1995). (<A HREF = "abstracts/ijhsc95.html">abstract</A>) (<A HREF = "papers/ijhsc95.ps">postscript</A>)
-(<A HREF = "papers/ijhsc95.ps.gz">ps.gz</A>)
+Computing, 7, 73-88 (1995). (<A HREF = "abstracts/ijhsc95.html">abstract</A>)
 </P>
-
-
-
-
 
 
 <P><B>Basis-Set Convergence of Highly Defected Sites in Amorphous-Carbon</B>,
@@ -834,23 +735,13 @@ P. A. Schultz, M. P.  Sears, Phys Rev B, 52, 9354-59
 <P><B>Massively-Parallel Methods for Engineering and Science Problems</B>,
 W. J. Camp, S.  J. Plimpton, B. A. Hendrickson, R. W. Leland,
 Communications of the ACM, 37, 31-41 (1994). (<A HREF = "abstracts/cacm94.html">abstract</A>)
-(<A HREF = "papers/cacm94.ps">postscript</A>) (<A HREF = "papers/cacm94.ps.gz">ps.gz</A>)
 </P>
-
-
-
-
 
 
 <P><B>Parallel Particle Simulations of Low-Density Fluid Flows</B>,
 S. J. Plimpton and T. J. Bartel, in Proc of High Performance
 Computing 1994, San Diego, CA, April 1994, p 31. (<A HREF = "abstracts/hpc94.html">abstract</A>)
-(<A HREF = "papers/hpc94.ps">postscript</A>) (<A HREF = "papers/hpc94.ps.gz">ps.gz</A>)
 </P>
-
-
-
-
 
 
 <HR>
@@ -861,12 +752,7 @@ Computing 1994, San Diego, CA, April 1994, p 31. (<A HREF = "abstracts/hpc94.htm
 S. J. Plimpton and B. A. Hendrickson, in Materials Theory and
 Modelling, edited by J. Broughton, P. Bristowe, and J. Newsam, MRS
 Proceedings 291, Pittsburgh, PA, 1993, p 37.  (<A HREF = "abstracts/mrs92.html">abstract</A>)
-(<A HREF = "papers/mrs92.ps">postscript</A>) (<A HREF = "papers/mrs92.ps.gz">ps.gz</A>)
 </P>
-
-
-
-
 
 
 <P><B>Plane-wave Electronic- Structure Calculations on a Parallel
@@ -878,12 +764,8 @@ B, 47, 1765-1774 (1993).  (<A HREF = "abstracts/prb93.html">abstract</A>)
 <P><B>A Massively-Parallel Digital Processor for Spotlight
 Synthetic-Aperture Radar</B>, G. A. Mastin, S. J. Plimpton, D. Ghiglia,
 Int J of Supercomputer Applications, 7, 97-112
-(1993). (<A HREF = "abstracts/ijsa93.html">abstract</A>) (<A HREF = "papers/ijsa93.ps">postscript</A>) (<A HREF = "papers/ijsa93.ps.gz">ps.gz</A>)
+(1993). (<A HREF = "abstracts/ijsa93.html">abstract</A>)
 </P>
-
-
-
-
 
 
 <P><B>Parallel Simulation of Electron-Solid Interactions: A Rapid Aid for
@@ -901,12 +783,8 @@ S. J. Plimpton, A. D. Romig Jr., Ultramicroscopy, 51, 160-167
 Massively Parallel Computers ?</B>, S. J. Plimpton, S. S. Dosanjh,
 R. B. Krall, in Proc of 37th IEEE International Computer Conference,
 COMPCON '92, San Francisco, CA, February 1992. p
-95-102. (<A HREF = "abstracts/compcon92.html">abstract</A>) (<A HREF = "papers/compcon92.ps">postscript</A>) (<A HREF = "papers/compcon92.ps.gz">ps.gz</A>)
+95-102. (<A HREF = "abstracts/compcon92.html">abstract</A>)
 </P>
-
-
-
-
 
 
 <P><B>Direct Monte Carlo Simulation of Ionized Rarefied Flows on Large MIMD
@@ -921,23 +799,15 @@ Vancouver, Canada, July 1992, published by AIAA, A94-30156, p
 Supercomputers</B>, S. J. Plimpton and T. J. Bartel, in Proc of Scalable
 High Performance Computing Conference, Williamsburg, VA, April 1992, p
 212, and in Computing Systems in Engineering, 3, 333-336
-(1992). (<A HREF = "abstracts/shpcc92.html">abstract</A>) (<A HREF = "papers/shpcc92.ps">postscript</A>) (<A HREF = "papers/shpcc92.ps.gz">ps.gz</A>)
+(1992). (<A HREF = "abstracts/shpcc92.html">abstract</A>)
 </P>
-
-
-
-
 
 
 <P><B>Parallel Simulation of Electron-Solid Interactions for
 Electron-Microscopy Modeling</B>, S. J. Plimpton, J. R. Michael,
 A. D. Romig, Jr., J of SuperComputing, 6, 139-151
-(1992). (<A HREF = "abstracts/jsc92.html">abstract</A>) (<A HREF = "papers/jsc92.ps">postscript</A>) (<A HREF = "papers/jsc92.ps.gz">ps.gz</A>)
+(1992). (<A HREF = "abstracts/jsc92.html">abstract</A>)
 </P>
-
-
-
-
 
 
 <HR>
@@ -948,23 +818,15 @@ A. D. Romig, Jr., J of SuperComputing, 6, 139-151
 MIMD, SIMD, and Vector Supercomputers</B>, S. J. Plimpton, I. Shokair,
 J. Wagner, in Proc of 5th SIAM Conference on Parallel Processing for
 Scientific Computing, Houston, TX, March 1991, p
-507-512. (<A HREF = "abstracts/siam91.html">abstract</A>) (<A HREF = "papers/siam91.ps">postscript</A>) (<A HREF = "papers/siam91.ps.gz">ps.gz</A>)
+507-512. (<A HREF = "abstracts/siam91.html">abstract</A>)
 </P>
-
-
-
-
 
 
 <P><B>Synthetic Aperture Radar Image Processing on Parallel
 Supercomputers</B>, S. J.  Plimpton, G. A. Mastin, D. Ghiglia, in Proc of
 Supercomputing '91, Albuquerque, NM, November 1991, p
-446. (<A HREF = "abstracts/sc91.html">abstract</A>) (<A HREF = "papers/sc91.ps">postscript</A>) (<A HREF = "papers/sc91.ps.gz">ps.gz</A>)
+446. (<A HREF = "abstracts/sc91.html">abstract</A>)
 </P>
-
-
-
-
 
 
 <HR>
