--- a/pronto.html
+++ b/pronto.html
@@ -142,12 +142,8 @@ Mechanics and Engineering, 184, 375-390
 Detection and Smoothed Particle Hydrodynamics</B>, S. J. Plimpton,
 S. Attaway, B. Hendrickson, J.  Swegle, C. Vaughan, D. Gardner, J
 Parallel and Distributed Computing, 50, 104- 122
-(1998). (<A HREF = "abstracts/jpdc98.html">abstract</A>) (<A HREF = "papers/jpdc98.ps">postscript</A>) (<A HREF = "papers/jpdc98.ps.gz">ps.gz</A>)
+(1998). (<A HREF = "abstracts/jpdc98.html">abstract</A>)
 </P>
-
-
-
-
 
 
 <P><B>A Parallel Contact Detection Algorithm for Transient Solid Dynamics
@@ -162,20 +158,16 @@ M. W. Heinstein, Computational Mechanics, 22, 143-159
 Computer</B>, S.  Attaway, T. Barragy, K. Brown, D. Gardner,
 B. Hendrickson, S. J. Plimpton, C.  Vaughan, Gordon Bell finalist
 paper, in Proc of SuperComputing '97, San Jose, CA, November
-1997. (<A HREF = "abstracts/sc97.html">abstract</A>) (<A HREF = "papers/HTML/sc97/sc97.html">html</A>)
+1997. (<A HREF = "abstracts/sc97.html">abstract</A>)
 </P>
-
-
 
 
 <P><B>Transient Dynamics Simulations: Parallel Algorithms for Contact
 Detection and Smoothed Particle Hydrodynamics</B>, S. J. Plimpton,
 S. Attaway, B. Hendrickson, J.  Swegle, C. Vaughan, D. Gardner, in
 Proc of SuperComputing '96, Pittsburgh, PA, November
-1996. (<A HREF = "abstracts/sc96.html">abstract</A>) (<A HREF = "papers/HTML/sc96/sc96.html">html</A>)
+1996. (<A HREF = "abstracts/sc96.html">abstract</A>)
 </P>
-
-
 
 
 </HTML>
