--- a/qs.html
+++ b/qs.html
@@ -73,12 +73,8 @@ in this paper:
 <P><B>A Load-Balancing Algorithm for a Parallel Electromagnetic
 Particle-in-Cell Code</B>, S. J. Plimpton, D. B. Seidel, M. F. Pasik,
 R. S. Coats, G. R. Montry, Comp Phys Comm, 152, 227-241 (2003).
-(<A HREF = "abstracts/cpc03.html">abstract</A>) (<A HREF = "papers/cpc03.pdf">pdf</A>) (<A HREF = "papers/cpc03.pdf.gz">pdf.gz</A>)
+(<A HREF = "abstracts/cpc03.html">abstract</A>)
 </P>
-
-
-
-
 
 
 <HR>
@@ -102,12 +98,8 @@ pretty cool pictures!
 MIMD, SIMD, and Vector Supercomputers</B>, S. J. Plimpton, I. Shokair,
 J. Wagner, in Proc of 5th SIAM Conference on Parallel Processing for
 Scientific Computing, Houston, TX, March 1991, p
-507-512. (<A HREF = "abstracts/siam91.html">abstract</A>) (<A HREF = "papers/siam91.ps">postscript</A>) (<A HREF = "papers/siam91.ps.gz">ps.gz</A>)
+507-512. (<A HREF = "abstracts/siam91.html">abstract</A>)
 </P>
-
-
-
-
 
 
 <CENTER><IMG SRC = "images/pic_buck.gif">
