--- a/rad.html
+++ b/rad.html
@@ -78,12 +78,8 @@ highlights their performance on 2 large parallel machines:
 Prioritization, Grid Partitioning, and Cycle-Detection</B>,
 S. J. Plimpton, B. Hendrickson, S. Burns, W. Mclendon III, L.
 Rauchwerger, Nuclear Science and Engineering, 150, 267-283 (2005).
-(<A HREF = "abstracts/nse05.html">abstract</A>) (<A HREF = "papers/nse05.ps">postscript</A>) (<A HREF = "papers/nse05.ps.gz">ps.gz</A>)
+(<A HREF = "abstracts/nse05.html">abstract</A>)
 </P>
-
-
-
-
 
 
 <P>This paper gives greater details about the parallel graph traversal
@@ -92,12 +88,8 @@ algorithms:
 <P><B>Finding Strongly Connected Components in Distributed Graphs</B>,
 W. McLendon, B. Hendrickson, S. J. Plimpton, L. Rauchwerger, J
 Parallel and Distributed Computing, 65, 901-910 (2005).
-(<A HREF = "abstracts/jpdc05.html">abstract</A>) (<A HREF = "papers/jpdc05.pdf">pdf</A>) (<A HREF = "papers/jpdc05.pdf.gz">pdf.gz</A>)
+(<A HREF = "abstracts/jpdc05.html">abstract</A>)
 </P>
-
-
-
-
 
 
 <P>This is a paper with details of our initial parallel sweeping
@@ -107,12 +99,8 @@ results on the Intel Tflops machine:
 <P><B>Parallel Algorithms for Radiation Transport on Unstructured Grids</B>,
 S. J. Plimpton, B. A. Hendrickson, S. P. Burns, W. McLendon III, Proc
 of SuperComputing 2000 (SC2000), Dallas, TX, November
-2000. (<A HREF = "abstracts/sc00.html">abstract</A>) (<A HREF = "papers/sc00.ps">postscript</A>) (<A HREF = "papers/sc00.ps.gz">ps.gz</A>)
+2000. (<A HREF = "abstracts/sc00.html">abstract</A>)
 </P>
-
-
-
-
 
 
 <P>This paper discusses out initial parallel algorithm for cycle
@@ -121,12 +109,8 @@ detection:
 <P><B>Identifying Strongly Connected Components in Parallel</B>, W. McLendon
 III, B.  Hendrickson, S. J. Plimpton, L. Rauchwerger, in Proc of SIAM
 Parallel Processing for Scientific Computing Conf, March
-2001. (<A HREF = "abstracts/siam01a.html">abstract</A>) (<A HREF = "papers/siam01a.ps">postscript</A>) (<A HREF = "papers/siam01a.ps.gz">ps.gz</A>)
+2001. (<A HREF = "abstracts/siam01a.html">abstract</A>)
 </P>
-
-
-
-
 
 
 </HTML>
