--- a/sar.html
+++ b/sar.html
@@ -87,23 +87,15 @@ nCUBE 2 and Connection Machine (CM-2) platforms.
 <P><B>A Massively-Parallel Digital Processor for Spotlight
 Synthetic-Aperture Radar</B>, G. A. Mastin, S. J. Plimpton, D. Ghiglia,
 Int J of Supercomputer Applications, 7, 97-112
-(1993). (<A HREF = "abstracts/ijsa93.html">abstract</A>) (<A HREF = "papers/ijsa93.ps">postscript</A>) (<A HREF = "papers/ijsa93.ps.gz">ps.gz</A>)
+(1993). (<A HREF = "abstracts/ijsa93.html">abstract</A>)
 </P>
-
-
-
-
 
 
 <P><B>Synthetic Aperture Radar Image Processing on Parallel
 Supercomputers</B>, S. J.  Plimpton, G. A. Mastin, D. Ghiglia, in Proc of
 Supercomputing '91, Albuquerque, NM, November 1991, p
-446. (<A HREF = "abstracts/sc91.html">abstract</A>) (<A HREF = "papers/sc91.ps">postscript</A>) (<A HREF = "papers/sc91.ps.gz">ps.gz</A>)
+446. (<A HREF = "abstracts/sc91.html">abstract</A>)
 </P>
-
-
-
-
 
 
 </HTML>
