--- a/index.html
+++ b/index.html
@@ -156,9 +156,7 @@ Molecular Dynamics (MD):
 
 <A NAME = "hrm"></A><H3>How to Reach Me 
 </H3>
-<A HREF = "mailto:sjplimp@sandia.gov">sjplimp at sandia.gov</A> <BR>
-
-<P>
+<P>sjplimp at sandia.gov 
 </P>
 Computational Multiscale Dept, MS 1316<BR>
 Sandia National Laboratories<BR>
